# Musible

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  build_debug.sh  spirv.sh
Musible/: config.txt
Musible/Lang/zh_CN/: config.txt
Source/: Game.c  Game.h  Musible.c  Musible.h
Source/Config/: config.c  config.h
Source/Graphics/: environment.h  graphics.c  graphics.h
Source/Graphics/Shaders/: shader.vert
Source/Lang/: lang.c  lang.h
Source/Utils/: mem.c  mem.h  str.c  str.h
Source/Utils/GLKit/: GLKMathTypes.h  GLKMathUtils.h  GLKMatrix3.h  GLKMatrix4.h  GLKMatrixStack.h  GLKQuaternion.h  GLKVector2.h  GLKVector3.h  GLKVector4.h
Static/: config.txt
Unused/Source/Graphics/Bitmap/: bitmap.h  shared.h
Unused/Source/Graphics/Fonts/: fonts.c  fonts.h
